--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <div id="controls">
             <button id="read-button">Read Aloud</button>
             <button id="sync-button">Sync Voice</button>
-            <button id="bookmark-button">Bookmark</button>
             <input type="range" id="progress-bar" min="0" max="100" value="0">
+            <label for="speed-dial">Speed:</label>
+            <input type="range" id="speed-dial" min="0.5" max="2" value="1" step="0.1">
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
