pause button added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div id="text-display"></div>
         <div id="controls">
             <button id="read-button">Read Aloud</button>
+            <button id="pause-button">Pause</button>
             <button id="sync-button">Sync Voice</button>
             <input type="range" id="progress-bar" min="0" max="100" value="0">
             <label for="speed-dial">Speed:</label>
