--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <input type="range" id="progress-bar" min="0" max="100" value="0">
             <label for="speed-dial">Speed:</label>
             <input type="range" id="speed-dial" min="0.5" max="2" value="1" step="0.1">
+            <span id="speed-value">1.0x</span>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
