--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
             <input type="range" id="speed-dial" min="0.5" max="4" value="1" step="0.1">
             <span id="speed-value">1.0x</span>
         </div>
+        <div id="voice-options">
+            <label for="voice-select">Voice:</label>
+            <select id="voice-select"></select>
+        </div>
+        <div id="ai-voice-options">
+            <h3>AI Voice</h3>
+            <button id="ai-read-button">Read with AI Voice</button>
+        </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
     <script src="script.js"></script>
