--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </div>
         <div id="ai-voice-options">
             <h3>AI Voice</h3>
+            <input type="password" id="openai-api-key" placeholder="Enter OpenAI API Key">
             <button id="ai-read-button">Read with AI Voice</button>
         </div>
     </div>
