--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <select id="voice-select"></select>
         </div>
         <div id="ai-voice-options">
-            <h3>AI Voice</h3>
-            <input type="password" id="openai-api-key" placeholder="Enter OpenAI API Key">
-            <button id="ai-read-button">Read with AI Voice</button>
+            <h3>AI Voice (Work in Progress)</h3>
+            <input type="password" id="openai-api-key" placeholder="Enter OpenAI API Key" disabled>
+            <button id="ai-read-button" disabled>Read with AI Voice</button>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
