--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
     <div id="container">
         <h1>Local Text-to-Speech</h1>
-        <input type="file" id="file-input" accept=".txt,.pdf">
+        <div class="boxed">
+            <input type="file" id="file-input" accept=".txt,.pdf">
+        </div>
         <div id="text-display"></div>
-        <div id="controls">
+        <div id="controls" class="boxed">
             <button id="read-button">Read Aloud</button>
             <button id="pause-button">Pause</button>
             <button id="sync-button">Sync Voice</button>
@@ -20,11 +22,11 @@
             <input type="range" id="speed-dial" min="0.5" max="4" value="1" step="0.1">
             <span id="speed-value">1.0x</span>
         </div>
-        <div id="voice-options">
+        <div id="voice-options" class="boxed">
             <label for="voice-select">Voice:</label>
             <select id="voice-select"></select>
         </div>
-        <div id="ai-voice-options">
+        <div id="ai-voice-options" class="boxed">
             <h3>AI Voice (Work in Progress)</h3>
             <input type="password" id="openai-api-key" placeholder="Enter OpenAI API Key" disabled>
             <button id="ai-read-button" disabled>Read with AI Voice</button>
