--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
             <button id="pause-button">Pause</button>
             <button id="sync-button">Sync Voice</button>
             <input type="range" id="progress-bar" min="0" max="100" value="0">
-            <label for="speed-dial">Speed:</label>
-            <input type="range" id="speed-dial" min="0.5" max="4" value="1" step="0.1">
-            <span id="speed-value">1.0x</span>
+            <div class="speed-dial-box">
+                <label for="speed-dial">Speed:</label>
+                <input type="range" id="speed-dial" min="0.5" max="4" value="1" step="0.1">
+                <span id="speed-value">1.0x</span>
+            </div>
         </div>
         <div id="voice-options" class="boxed">
             <label for="voice-select">Voice:</label>
